--- a/app/src/main/res/layout/movie_list_layout.xml
+++ b/app/src/main/res/layout/movie_list_layout.xml
@@ -17,12 +17,11 @@
         android:layout_height="wrap_content"
         android:textSize="16dp"
         android:text="Title"
-        android:gravity="center_vertical|right"
         android:id="@+id/textViewMoviesTitle"
         android:layout_alignParentTop="true"
         android:layout_toEndOf="@+id/imageViewMoviesImage"
         android:layout_marginTop="3dp"
-        android:textColor="#000000" />
+        android:textColor="#ff454545" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -34,6 +33,15 @@
         android:layout_alignBottom="@+id/imageViewMoviesImage"
         android:layout_alignParentEnd="true"
         android:layout_toEndOf="@+id/imageViewMoviesImage"
-        android:textColor="#000000" />
+        android:textColor="#ff454545" />
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/checkBoxMovies"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:checked="false"
+        android:buttonTint="#ff454545" />
 
 </RelativeLayout>
